--- a/app/templates/auth/create-user.html
+++ b/app/templates/auth/create-user.html
@@ -105,7 +105,7 @@
             {%
               with
               type = "save",
-              label = "{% if role == 'buyer' %}Create account{% elif role == 'supplier' %}Create contributor account{% endif %}"
+              label = "Create account" if role == 'buyer' else "Create contributor account"
             %}
               {% include "toolkit/button.html" %}
             {% endwith %}
