Pull in version 24.1.0 of frontend toolkit
It includes a template for the proposition header. This template fixes
an issue with the logout link not being a button.

--- a/app/templates/auth/create-user.html
+++ b/app/templates/auth/create-user.html
@@ -23,7 +23,7 @@
 
 {% set headings = {
     'buyer': 'Create a new Digital Marketplace account',
-    'supplier': "Create contributor account for {{ supplier_name }}"
+    'supplier': "Create contributor account for " ~ supplier_name
    }
 %}
 
