create user page: change our minds and for now use "Create account" button label for both cases

--- a/app/templates/auth/create-user.html
+++ b/app/templates/auth/create-user.html
@@ -102,7 +102,7 @@
             {%
               with
               type = "save",
-              label = "Create account" if role == 'buyer' else "Save and continue"
+              label = "Create account"
             %}
               {% include "toolkit/button.html" %}
             {% endwith %}
