--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -5,7 +5,7 @@
 {% block main_content %}
 
 <div class="error-page">
-    <div class="index-page grid-row">
+    <div class="grid-row">
         <div class="column-two-thirds">
             <header class="page-heading-smaller">
                 <h1>Page could not be found</h1>
