--- a/app/assets/scss/application.scss
+++ b/app/assets/scss/application.scss
@@ -1,24 +1,23 @@
-// GOVUK Front-end toolkit styles
-@import "_grid_layout.scss";
-@import "_typography.scss";
+// GOVUK Front-end toolkit variables, mixins and functions
+@import "_grid_layout.scss";    // Grid variables
+@import "_typography.scss";     // Core bold and heading mixins
 @import "_url-helpers.scss";
 
 // Path to assets for use with file-url()
 $path: "/static/images/";
 
-// Digital Marketplace front end toolkit components
-/* Classes shared between multiple apps */
-@import "toolkit/shared_scss/_reset.scss";
-@import "toolkit/shared_scss/_lists.scss";
-@import "toolkit/shared_scss/_dmspeak.scss";
-
-/* Blocks shared between multiple selectors */
+// Digital Marketplace Front-end toolkit shared CSS placeholders used by other DM toolkit styles
 @import "toolkit/shared_placeholders/_temporary-messages.scss";
 @import "toolkit/shared_placeholders/_placeholders.scss";
 @import "toolkit/shared_placeholders/_dm-typography.scss";
 @import "toolkit/shared_placeholders/_mixins.scss";
 
-// Digital Marketplace Front-end toolkit styles
+// Digital Marketplace Front-end toolkit shared styles between multiple apps
+@import "toolkit/shared_scss/_reset.scss";
+@import "toolkit/shared_scss/_lists.scss";
+@import "toolkit/shared_scss/_dmspeak.scss";
+
+// Digital Marketplace Front-end toolkit styles (only import the files you need)
 @import "toolkit/_breadcrumb.scss";
 @import "toolkit/_buttons.scss";
 @import "toolkit/_grids.scss";
@@ -32,13 +31,15 @@ $path: "/static/images/";
 @import "toolkit/forms/_textboxes.scss";
 @import "toolkit/forms/_validation.scss";
 
-#wrapper {
-  @extend %site-width-container;
-  padding-bottom: $gutter * 2;
-}
-
-// User app custom styles
+// App specific styles
 @import "_footer.scss";
 @import "_text.scss";
 @import "_secondary-action-link.scss";
 @import "_error-pages.scss";
+
+// Misc styles
+// TODO: Move misc styling into their own partial files or the Digital Marketplace FE Toolkit
+#wrapper {
+  @extend %site-width-container;
+  padding-bottom: $gutter * 2;
+}
