Update header to make it easier to find support guidance and where to log in
This is part of a larger piece of work to change the homepage styling so it is easier to find things on the page and consistent with other services in the service toolkit.

Examples of other pages that use this pattern can be found under the components heading on the service toolkit. https://www.gov.uk/service-toolkit

The code for these pages can be found here: https://github.com/alphagov/product-page-example

As part of this work we will make support easier to find and remove the beta phase banner

The guidance link would go to: https://www.gov.uk/government/collections/digital-marketplace-buyers-and-suppliers-information

The GOV.UK Digital Marketplace logo would go to the digital marketplace home page.

Ticket ID: https://trello.com/c/mityCieG/106-update-header-to-make-it-easier-to-find-support-guidance-and-where-to-log-in

<img width="1139" alt="screen shot 2018-01-12 at 11 15 26" src="https://user-images.githubusercontent.com/4599889/34872723-f170be4c-f789-11e7-9332-23b0824b1514.png">

--- a/app/templates/_base_page.html
+++ b/app/templates/_base_page.html
@@ -10,6 +10,10 @@
 
 {% block header_class %}with-proposition{% endblock %}
 
+{% block inside_header %}
+  {% include "toolkit/inside-header.html" %}
+{% endblock %}
+
 {% block proposition_header %}
   {% include "toolkit/proposition-header.html" %}
 {% endblock %}
@@ -17,9 +21,6 @@
 {% block content %}
     {% block top_header %}
     {% endblock %}
-{% block phase_banner %}
-  {% include "toolkit/phase-banner.html" %}
-{% endblock %}
   {% block breadcrumb %}{% endblock %}
   <div id="wrapper">
     <main id="content" role="main">
