Backend form for sign up to mailing list
As a developer I need to be able to use a form for validating responses to the sign me up for user research page.

This form should follow existing pattens so it is easily extensible.
See prototype for fields and help text

Ticket: https://trello.com/c/qoRyFSEn/130-backend-form-for-sign-up-to-mailing-list

--- a/app/assets/scss/application.scss
+++ b/app/assets/scss/application.scss
@@ -30,6 +30,7 @@ $path: "/static/images/";
 @import "toolkit/forms/_questions.scss";
 @import "toolkit/forms/_textboxes.scss";
 @import "toolkit/forms/_validation.scss";
+@import "toolkit/forms/_selection-buttons.scss";
 
 // App specific styles
 @import "_footer.scss";
