--- a/app/templates/notifications/user-research-consent.html
+++ b/app/templates/notifications/user-research-consent.html
@@ -23,22 +23,33 @@
 
 <div class="grid-row notification-user-research">
 
+  {% if errors %}
+    {% with errors = errors.values() %}
+      {% include 'toolkit/forms/validation.html' %}
+    {% endwith %}
+  {% endif %}
+
   <div class="column-two-thirds">
     {% with heading = "{}".format(
         "Join the user research mailing list" 
-          if not userResearchOptIn
+          if not form.user_research_opt_in.data
           else "Unsubscribe from the user research mailing list"
         ) %}
       {% include "toolkit/page-heading.html" %}
     {% endwith %}
 
-    {% if not userResearchOptIn %}
+    {% if not form.user_research_opt_in.data %}
       <p class="text">
-        Help us improve the Digital Marketplace by taking part in user research.
+        We need to talk to people who use the Digital Marketplace to help us make our service better - user research is how we do this.
       </p>
-      <p class="text">
-        You don’t have to take part just because you’ve signed up and you can unsubscribe at any time.
-      </p>
+      <div class="text">
+        When you join our user research mailing list you:
+        <ul class="list list-bullet">
+          <li>will only be contacted to be invited to take part in user research</li>
+          <li>don’t have to agree to take part in research</li>
+          <li>can unsubscribe at any time</li>
+        </ul>
+      </div>
     {% else %}
       <p class="text">
          You can join again at any time.
@@ -51,13 +62,14 @@
         with
         type = "checkbox",
         name = "user_research_opt_in",
-        value = [userResearchOptIn],
+        value = [form.user_research_opt_in.data or None],
         options = [
-          { 
-            "label": "Send me emails about opportunities to get involved in user research",
-            "value": True,
+          {
+            "label": form.user_research_opt_in.label.text,
+            "value": form.user_research_opt_in.data,
           }
-        ]
+        ],
+        error = errors.get('user_research_opt_in', {}).get('message', None)
       %}
         {% include "toolkit/forms/selection-buttons.html" %}
       {% endwith %}
@@ -68,7 +80,7 @@
         name="save_changes",
         analytics = "tracking",
         analytics_category = "user_research",
-        analytics_action = "subscribe" if not userResearchOptIn else "unsubscribe"
+        analytics_action = "subscribe" if not form.user_research_opt_in.data else "unsubscribe"
       %}
         {% include "toolkit/button.html" %}
       {% endwith %}
