Add password constraints and validation of old password
- New passwords must match
- New passwords must be between 10 and 50 chars
- The old password should be valid

--- a/app/templates/auth/change-password.html
+++ b/app/templates/auth/change-password.html
@@ -35,7 +35,7 @@
             {% endif %}
                 <div class="question" id="{{ form.old_password.name }}">
                     {{ form.old_password.label(class="question-heading") }}
-                    {% if form.password.errors %}
+                    {% if form.old_password.errors %}
                     <p class="validation-message" id="error-old-password-textbox">
                         {% for error in form.old_password.errors %}{{ error }}{% endfor %}
                     </p>
