Add 'Return to your account' link to 'Change password' page

--- a/app/templates/auth/change-password.html
+++ b/app/templates/auth/change-password.html
@@ -95,4 +95,11 @@
         </div>
     </div>
 </form>
+{%
+  with
+  url = dashboard_url,
+  text = "Return to your account"
+%}
+  {% include "toolkit/secondary-action-link.html" %}
+{% endwith %}
 {% endblock %}
