--- a/app/templates/auth/change-password.html
+++ b/app/templates/auth/change-password.html
@@ -2,6 +2,23 @@
 
 {% block page_title %}Change password – Digital Marketplace{% endblock %}
 
+{% block breadcrumb %}
+  {%
+    with items = [
+      {
+        "link": "/",
+        "label": "Digital Marketplace"
+      },
+      {
+        "link": dashboard_url,
+        "label": "Your account"
+      }
+    ]
+  %}
+    {% include "toolkit/breadcrumb.html" %}
+  {% endwith %}
+{% endblock %}
+
 {% block main_content %}
 
 {% if form.errors|length > 1 %}
