--- a/app/assets/scss/application.scss
+++ b/app/assets/scss/application.scss
@@ -26,6 +26,7 @@ $path: "/static/images/";
 @import "toolkit/_phase-banner.scss";
 @import "toolkit/_proposition-header.scss";
 @import "toolkit/_secondary-action-link.scss";
+@import "toolkit/_report-a-problem.scss";
 @import "toolkit/forms/_hint.scss";
 @import "toolkit/forms/_questions.scss";
 @import "toolkit/forms/_textboxes.scss";
