--- a/app/templates/auth/change-password.html
+++ b/app/templates/auth/change-password.html
@@ -1,4 +1,4 @@
-{% extends "_base_page.html" %}
+{% extends "toolkit/layouts/_base_page.html" %}
 
 {% block page_title %}Change password – Digital Marketplace{% endblock %}
 
