--- a/app/templates/auth/create-user-error.html
+++ b/app/templates/auth/create-user-error.html
@@ -1,4 +1,4 @@
-{% extends "_base_page.html" %}
+{% extends "toolkit/layouts/_base_page.html" %}
 
 {% block page_title %}
   {% if role == 'supplier' %}Create contributor account{% else %}Create account error{% endif %} - Digital Marketplace
