Refactor the code as follows:
- Rename PasswordResetForm and PasswordChangeForm for clarity

- Move validation messages into constants for tests

- Import notify template IDs from config for tests

- Simplify test statement

- Use toolkit for page headings

--- a/app/templates/auth/reset-password.html
+++ b/app/templates/auth/reset-password.html
@@ -19,9 +19,11 @@
     </div>
 {% endif %}
 
-<header class="page-heading">
-    <h1>Reset password</h1>
-</header>
+{% with
+  heading = "Reset password"
+%}
+  {% include "toolkit/page-heading.html" %}
+{% endwith %}
 <p class="lede">
     Reset password for {{ email_address }}
 </p>
