--- a/app/templates/auth/change-password.html
+++ b/app/templates/auth/change-password.html
@@ -36,9 +36,11 @@
     </div>
 {% endif %}
 
-<header class="page-heading">
-    <h1>Change your password</h1>
-</header>
+{% with
+  heading = "Change your password"
+%}
+  {% include "toolkit/page-heading.html" %}
+{% endwith %}
 
 <form autocomplete="off" action="{{ url_for('.change_password') }}" method="POST">
 
