Consolidate validation mastheads
 ## Summary
Use validation masthead from the frontend-toolkit consistently.

Also converts most pages over to using the base page from the frontend-toolkit.

 ## Ticket
https://trello.com/c/RSYEM3FL/448

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -30,41 +30,25 @@
         <div class="column-two-thirds">
 
             {{ form.hidden_tag() }}
-
-            {% if form.email_address.errors %}
-                <div class="validation-wrapper">
-            {% endif %}
-                <div class="question" id="{{ form.email_address.name }}">
-                    {{ form.email_address.label(class="question-heading") }}
-                    <p class="hint">
-                        Enter the email address you used to register with the Digital Marketplace
-                    </p>
-                    {% if form.email_address.errors %}
-                    <p class="validation-message" id="error-email-address-textbox">
-                        {% for error in form.email_address.errors %}{{ error }}{% endfor %}
-                    </p>
-                    {% endif %}
-                    {{ form.email_address(class="text-box", autocomplete="off") }}
-                </div>
-            {% if form.email_address.errors %}
-                </div>
-            {% endif %}
-
-            {% if form.password.errors %}
-                <div class="validation-wrapper">
-            {% endif %}
-                <div class="question" id="{{ form.password.name }}">
-                    {{ form.password.label(class="question-heading") }}
-                    {% if form.password.errors %}
-                    <p class="validation-message" id="error-password-textbox">
-                        {% for error in form.password.errors %}{{ error }}{% endfor %}
-                    </p>
-                    {% endif %}
-                    {{ form.password(class="text-box", autocomplete="off") }}
-                </div>
-            {% if form.password.errors %}
-                </div>
-            {% endif %}
+  
+            {% with question = form.email_address.label,
+                    name = "email_address",
+                    error = errors.get('email_address', {}).get('message'),
+                    hint = form.email_address.hint,
+                    value = form.email_address.data,
+                    autocomplete = "off"
+            %}
+              {% include "toolkit/forms/textbox.html" %}
+            {% endwith %}
+  
+            {% with question = form.password.label,
+                    name = "password",
+                    error = errors.get('password', {}).get('message'),
+                    value = form.password.data,
+                    type = "password"
+            %}
+              {% include "toolkit/forms/textbox.html" %}
+            {% endwith %}
 
             {%
               with
