--- a/app/templates/auth/change-password.html
+++ b/app/templates/auth/change-password.html
@@ -20,12 +20,7 @@
 {% endblock %}
 
 {% block main_content %}
-
-{% if errors %}
-    {% with errors = errors.values() %}
-      {% include 'toolkit/forms/validation.html' %}
-    {% endwith %}
-{% endif %}
+  {% include 'toolkit/forms/validation.html' %}
 
 {% with
   heading = "Change your password"
@@ -38,60 +33,37 @@
     <div class="grid-row">
         <div class="column-two-thirds">
             {{ form.hidden_tag() }}
-
-
-            {% if form.old_password.errors %}
-                <div class="validation-wrapper">
-            {% endif %}
-                <div class="question" id="{{ form.old_password.name }}">
-                    {{ form.old_password.label(class="question-heading") }}
-                    {% if form.old_password.errors %}
-                    <p class="validation-message" id="error-old-password-textbox">
-                        {% for error in form.old_password.errors %}{{ error }}{% endfor %}
-                    </p>
-                    {% endif %}
-                    {{ form.old_password(class="text-box", autocomplete="off") }}
-                </div>
-            {% if form.old_password.errors %}
-                </div>
-            {% endif %}
-
-
-            {% if form.password.errors %}
-                <div class="validation-wrapper">
-            {% endif %}
-                <div class="question" id="{{ form.password.name }}">
-                    {{ form.password.label(class="question-heading") }}
-                    <p class="hint">
-                      Must be between 10 and 50 characters
-                    </p>
-                    {% if form.password.errors %}
-                    <p class="validation-message" id="error-password-textbox">
-                        {% for error in form.password.errors %}{{ error }}{% endfor %}
-                    </p>
-                    {% endif %}
-                    {{ form.password(class="text-box", autocomplete="off") }}
-                </div>
-            {% if form.password.errors %}
-                </div>
-            {% endif %}
-
-            {% if form.confirm_password.errors %}
-                <div class="validation-wrapper">
-            {% endif %}
-                <div class="question" id="{{ form.confirm_password.name }}">
-                    {{ form.confirm_password.label(class="question-heading") }}
-
-                    {% if form.confirm_password.errors %}
-                    <p class="validation-message" id="error-confirm-password-textbox">
-                        {% for error in form.confirm_password.errors %}{{ error }}{% endfor %}
-                    </p>
-                    {% endif %}
-                    {{ form.confirm_password(class="text-box", autocomplete="off") }}
-                </div>
-            {% if form.confirm_password.errors %}
-                </div>
-            {% endif %}
+          
+            {% with question = form.old_password.label,
+                    name = "old_password",
+                    error = errors.get('old_password', {}).get('message'),
+                    value = form.old_password.data,
+                    type = "password",
+                    autocomplete = "off"
+            %}
+              {% include "toolkit/forms/textbox.html" %}
+            {% endwith %}
+  
+          {% with question = form.password.label,
+                  name = "password",
+                  error = errors.get('password', {}).get('message'),
+                  hint = form.password.hint,
+                  value = form.password.data,
+                  type = "password",
+                  autocomplete = "off"
+          %}
+            {% include "toolkit/forms/textbox.html" %}
+          {% endwith %}
+  
+          {% with question = form.confirm_password.label,
+                  name = "confirm_password",
+                  error = errors.get('confirm_password', {}).get('message'),
+                  value = form.confirm_password.data,
+                  type = "password",
+                  autocomplete = "off"
+          %}
+            {% include "toolkit/forms/textbox.html" %}
+          {% endwith %}
 
             {%
               with
