--- a/app/templates/auth/create-user.html
+++ b/app/templates/auth/create-user.html
@@ -42,70 +42,44 @@
         <div class="grid-row">
             <div class="column-two-thirds">
                 {{ form.hidden_tag() }}
-
-                {% if form.name.errors %}
-                <div class="validation-wrapper">
-                    {% endif %}
-                    <div class="question" id="{{ form.name.name }}">
-                        {{ form.name.label(class="question-heading") }}
-                        {% if form.name.errors %}
-                        <p class="validation-message" id="error-name-textbox">
-                            {% for error in form.name.errors %}{{ error }}{% endfor %}
-                        </p>
-                        {% endif %}
-                        {{ form.name(class="text-box", autocomplete="off") }}
-                    </div>
-                    {% if form.name.errors %}
-                </div>
-                {% endif %}
+  
+                {% with question = form.name.label,
+                        name = "name",
+                        error = errors.get('name', {}).get('message'),
+                        value = form.name.data,
+                        autocomplete = "off"
+                %}
+                  {% include "toolkit/forms/textbox.html" %}
+                {% endwith %}
 
                 {% if role == 'buyer' %}
-                  {% if form.phone_number.errors %}
-                      <div class="validation-wrapper">
-                  {% endif %}
-                      <div class="question" id="{{ form.phone_number.name }}">
-                          {{ form.phone_number.label(class="question-heading") }}
-                          <p class="hint">
-                            If there are any urgent problems with your requirements, we need your phone number so the support team can help you fix them quickly.
-                          </p>
-                          {% if form.phone_number.errors %}
-                          <p class="validation-message" id="error-password-textbox">
-                              {% for error in form.phone_number.errors %}{{ error }}{% endfor %}
-                          </p>
-                          {% endif %}
-                          {{ form.phone_number(class="text-box", autocomplete="off") }}
-                      </div>
-                  {% if form.phone_number.errors %}
-                      </div>
-                  {% endif %}
+                  {% with question = form.phone_number.label,
+                          name = "phone_number",
+                          error = errors.get('phone_number', {}).get('message'),
+                          hint = form.phone_number.hint,
+                          value = form.phone_number.data,
+                          autocomplete = "off"
+                  %}
+                    {% include "toolkit/forms/textbox.html" %}
+                  {% endwith %}
                 {% endif %}
+  
+                {% with question = form.password.label,
+                        name = "password",
+                        error = errors.get('password', {}).get('message'),
+                        value = form.password.data,
+                        type = "password"
+                %}
+                  {% include "toolkit/forms/textbox.html" %}
+                {% endwith %}
 
-                {% if form.password.errors %}
-                    <div class="validation-wrapper">
-                {% endif %}
-                    <div class="question" id="{{ form.password.name }}">
-                        {{ form.password.label(class="question-heading") }}
-                        <p class="hint">
-                          Must be between 10 and 50 characters
-                        </p>
-                        {% if form.password.errors %}
-                        <p class="validation-message" id="error-password-textbox">
-                            {% for error in form.password.errors %}{{ error }}{% endfor %}
-                        </p>
-                        {% endif %}
-                        {{ form.password(class="text-box", autocomplete="off") }}
-                    </div>
-                {% if form.password.errors %}
-                    </div>
-                {% endif %}
-
-            {%
-              with
-              type = "save",
-              label = "Create account"
-            %}
-              {% include "toolkit/button.html" %}
-            {% endwith %}
+                {%
+                  with
+                  type = "save",
+                  label = "Create account"
+                %}
+                  {% include "toolkit/button.html" %}
+                {% endwith %}
             </div>
         </div>
     </form>
