--- a/app/templates/auth/reset-password.html
+++ b/app/templates/auth/reset-password.html
@@ -3,21 +3,9 @@
 {% block page_title %}Reset password – Digital Marketplace{% endblock %}
 
 {% block main_content %}
-
-{% if form.errors %}
-    <div class="validation-masthead" aria-labelledby="validation-masthead-heading">
-        <h3 class="validation-masthead-heading" id="validation-masthead-heading">
-            There was a problem with the details you gave for:
-        </h3>
-        <ul>
-        {% for field_name, field_errors in form.errors|dictsort|reverse if field_errors %}
-          {% for error in field_errors %}
-            <li><a href="#{{ form[field_name].name }}" class="validation-masthead-link">{{ form[field_name].label.text }}</a></li>
-          {% endfor %}
-        {% endfor %}
-        </ul>
-    </div>
-{% endif %}
+{% with lede = "There was a problem with the details you gave for:" %}
+  {% include "toolkit/forms/validation.html" %}
+{% endwith %}
 
 {% with
   heading = "Reset password"
@@ -33,42 +21,25 @@
     <div class="grid-row">
         <div class="column-two-thirds">
             {{ form.hidden_tag() }}
-
-            {% if form.password.errors %}
-                <div class="validation-wrapper">
-            {% endif %}
-                <div class="question" id="{{ form.password.name }}">
-                    {{ form.password.label(class="question-heading") }}
-                    <p class="hint">
-                      Must be between 10 and 50 characters
-                    </p>
-                    {% if form.password.errors %}
-                    <p class="validation-message" id="error-password-textbox">
-                        {% for error in form.password.errors %}{{ error }}{% endfor %}
-                    </p>
-                    {% endif %}
-                    {{ form.password(class="text-box", autocomplete="off") }}
-                </div>
-            {% if form.password.errors %}
-                </div>
-            {% endif %}
-
-            {% if form.confirm_password.errors %}
-                <div class="validation-wrapper">
-            {% endif %}
-                <div class="question" id="{{ form.confirm_password.name }}">
-                    {{ form.confirm_password.label(class="question-heading") }}
-
-                    {% if form.confirm_password.errors %}
-                    <p class="validation-message" id="error-confirm-password-textbox">
-                        {% for error in form.confirm_password.errors %}{{ error }}{% endfor %}
-                    </p>
-                    {% endif %}
-                    {{ form.confirm_password(class="text-box", autocomplete="off") }}
-                </div>
-            {% if form.confirm_password.errors %}
-                </div>
-            {% endif %}
+            
+            {% with question = form.password.label,
+                    name = "password",
+                    error = errors.get('password', {}).get('message'),
+                    hint = form.password.hint,
+                    value = form.password.data,
+                    type = "password"
+            %}
+              {% include "toolkit/forms/textbox.html" %}
+            {% endwith %}
+          
+            {% with question = form.confirm_password.label,
+                    name = "confirm_password",
+                    error = errors.get('confirm_password', {}).get('message'),
+                    value = form.confirm_password.data,
+                    type = "password"
+            %}
+              {% include "toolkit/forms/textbox.html" %}
+            {% endwith %}
 
             {%
               with
