Import user research banner assets

--- a/app/assets/scss/application.scss
+++ b/app/assets/scss/application.scss
@@ -32,6 +32,7 @@ $path: "/static/images/";
 @import "toolkit/forms/_textboxes.scss";
 @import "toolkit/forms/_validation.scss";
 @import "toolkit/forms/_selection-buttons.scss";
+@import "toolkit/_user-research-consent-banner.scss";
 
 // App specific styles
 @import "_footer.scss";
