--- a/app/templates/auth/request-password-reset.html
+++ b/app/templates/auth/request-password-reset.html
@@ -2,6 +2,26 @@
 
 {% block page_title %}Reset password – Digital Marketplace{% endblock %}
 
+{% block breadcrumb %}
+  {%
+    with items = [
+      {
+        "link": "/",
+        "label": "Digital Marketplace"
+      },
+      {
+        "link": "/user/login",
+        "label": "Login"
+      },
+      {
+        "label": "Reset password"
+      }
+    ]
+  %}
+    {% include "toolkit/breadcrumb.html" %}
+  {% endwith %}
+{% endblock %}
+
 {% block main_content %}
 
 <header class="page-heading">
