--- a/app/templates/auth/reset-password.html
+++ b/app/templates/auth/reset-password.html
@@ -2,6 +2,22 @@
 
 {% block page_title %}Reset password – Digital Marketplace{% endblock %}
 
+{% block breadcrumb %}
+  {%
+    with items = [
+      {
+        "link": "/",
+        "label": "Digital Marketplace"
+      },
+      {
+        "label": "Reset password"
+      }
+    ]
+  %}
+    {% include "toolkit/breadcrumb.html" %}
+  {% endwith %}
+{% endblock %}
+
 {% block main_content %}
 {% with lede = "There was a problem with the details you gave for:" %}
   {% include "toolkit/forms/validation.html" %}
