--- a/app/templates/auth/create-user-error.html
+++ b/app/templates/auth/create-user-error.html
@@ -22,7 +22,7 @@
       <div class="explanation-list">
         <p class="lead">
           <a href="{{ url_for('external.create_buyer_account') }}">Create an account using a different email address</a> or email
-          <a href="mailto:enquiries@digitalmarketplace.service.gov.uk">enquiries@digitalmarketplace.service.gov.uk</a> if:
+          <a href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> if:
         </p>
         <ul class="list-bullet">
           <li>
@@ -46,10 +46,10 @@
     The link you used to create an account may have expired.<br/>
     {% if role == 'buyer' %}
       Check you’ve entered the correct link or <a href="{{ url_for('external.create_buyer_account') }}">send a new one</a>.<br/>
-      If you still can’t create an account, email <a href="mailto:enquiries@digitalmarketplace.service.gov.uk">enquiries@digitalmarketplace.service.gov.uk</a>.
+      If you still can’t create an account, email <a href="mailto:{{ support_email_address }}">{{ support_email_address }}</a>.
     {% elif role == 'supplier' %}
       Check you’ve entered the correct link or ask the person who invited you to send a new invitation.<br/>
-      If you still can’t create a contributor account, email <a href="mailto:enquiries@digitalmarketplace.service.gov.uk">enquiries@digitalmarketplace.service.gov.uk</a>.
+      If you still can’t create a contributor account, email <a href="mailto:{{ support_email_address }}">{{ support_email_address }}</a>.
     {% endif %}
   </p>
 
@@ -61,7 +61,7 @@
       <h1>Your account has been deactivated.</h1>
     </header>
     <p>
-      Email <a href="mailto:enquiries@digitalmarketplace.service.gov.uk">enquiries@digitalmarketplace.service.gov.uk</a> to reactivate your account.
+      Email <a href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> to reactivate your account.
     </p>
 
   {% elif user.locked %}
@@ -70,7 +70,7 @@
       <h1>Your account has been locked.</h1>
     </header>
     <p>
-      Email <a href="mailto:enquiries@digitalmarketplace.service.gov.uk">enquiries@digitalmarketplace.service.gov.uk</a> to unlock your account.
+      Email <a href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> to unlock your account.
     </p>
 
   {% elif role == 'buyer' and user.role == 'supplier' %}
@@ -80,7 +80,7 @@
     </header>
     <p>Your email address is already registered as an account with ‘{{ user.supplier_name }}’.</p>
     <p>You can <a href="{{ url_for('external.create_buyer_account') }}">create a buyer account using a different email address</a>, or email
-      <a href="mailto:enquiries@digitalmarketplace.service.gov.uk">enquiries@digitalmarketplace.service.gov.uk</a> to have your account
+      <a href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> to have your account
       converted to a buyer account.</p>
     <p>
       Alternatively, <a href="{{ url_for('.render_login') }}">Log in</a> to your {{ user.supplier_name }} account.
@@ -96,7 +96,7 @@
     <br>
     <p>
       <a href="/login">Log in</a> to your {{ user.supplier_name }} account or email
-      <a href="mailto:enquiries@digitalmarketplace.service.gov.uk">enquiries@digitalmarketplace.service.gov.uk</a> to register your account with a different organisation.
+      <a href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> to register your account with a different organisation.
     </p>
 
   {% else %}
