straightforward heading substitutions

--- a/app/templates/auth/change-password.html
+++ b/app/templates/auth/change-password.html
@@ -22,11 +22,7 @@
 {% block main_content %}
   {% include 'toolkit/forms/validation.html' %}
 
-{% with
-  heading = "Change your password"
-%}
-  {% include "toolkit/page-heading.html" %}
-{% endwith %}
+<h1 class="govuk-heading-xl">Change your password<h1>
 
 <form autocomplete="off" action="{{ url_for('.change_password') }}" method="POST">
 
