--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -24,11 +24,7 @@
     {% include 'toolkit/forms/validation.html' %}
 {% endwith %}
 
-{% with
-  heading = "Log in to the Digital Marketplace"
-%}
-  {% include "toolkit/page-heading.html" %}
-{% endwith %}
+<h1 class="govuk-heading-xl">Log in to the Digital Marketplace</h1>
 
 <form autocomplete="off" action="{{ url_for('.process_login', next=next) }}" method="POST">
     <div class="grid-row">
