switch breadcrumbs to digitalmarketplace-govuk-frontend, standardize trailing breadcrumb element
in places where we didn't previously have a trailing breadcrumb element
representing the current page I added one, mostly with the exact heading
of the page but in some places using a bit of artistic license to make
it a bit simpler

--- a/app/templates/_base_page.html
+++ b/app/templates/_base_page.html
@@ -2,4 +2,20 @@
 
 // Insert line for each component module import
 
+{% from "components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
 {% from "components/button/macro.njk" import govukButton %}
+
+{# override content block to add a beforeContent block like the one in govuk-frontend template #}
+{% block content %}
+  {% block top_header %}{% endblock %}
+  <div id="wrapper">
+    {% block beforeContent %}
+      {% block breadcrumb %}{% endblock %}
+    {% endblock %}
+    <main id="content" role="main">
+      {% include "toolkit/flash_messages.html" %}
+      {% block main_content %}
+      {% endblock %}
+    </main>
+  </div>
+{% endblock %}
