--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -3,19 +3,15 @@
 {% block page_title %}Log in – Digital Marketplace{% endblock %}
 
 {% block breadcrumb %}
-  {%
-    with items = [
-      {
-        "link": "/",
-        "label": "Digital Marketplace"
-      },
-      {
-        "label": "Login"
-      }
-    ]
-  %}
-    {% include "toolkit/breadcrumb.html" %}
-  {% endwith %}
+  {{ govukBreadcrumbs({"items": [
+    {
+      "text": "Digital Marketplace",
+      "href": "/",
+    },
+    {
+      "text": "Login",
+    },
+  ]}) }}
 {% endblock %}
 
 {% block main_content %}
