--- a/app/templates/auth/request-password-reset.html
+++ b/app/templates/auth/request-password-reset.html
@@ -3,23 +3,19 @@
 {% block page_title %}Reset password – Digital Marketplace{% endblock %}
 
 {% block breadcrumb %}
-  {%
-    with items = [
-      {
-        "link": "/",
-        "label": "Digital Marketplace"
-      },
-      {
-        "link": "/user/login",
-        "label": "Login"
-      },
-      {
-        "label": "Reset password"
-      }
-    ]
-  %}
-    {% include "toolkit/breadcrumb.html" %}
-  {% endwith %}
+  {{ govukBreadcrumbs({"items": [
+    {
+      "text": "Digital Marketplace",
+      "href": "/",
+    },
+    {
+      "text": "Login",
+      "href": "/user/login",
+    },
+    {
+      "text": "Reset password",
+    },
+  ]}) }}
 {% endblock %}
 
 {% block main_content %}
