--- a/app/templates/notifications/user-research-consent.html
+++ b/app/templates/notifications/user-research-consent.html
@@ -13,7 +13,7 @@
       "href": dashboard_url,
     },
     {
-      "text": "User research mailing list",
+      "text": "User research mailing list preferences",
     },
   ]}) }}
 {% endblock %}
