switch headings to digitalmarketplace-govuk-frontend, add temp spacing override

--- a/app/templates/auth/request-password-reset.html
+++ b/app/templates/auth/request-password-reset.html
@@ -24,9 +24,8 @@
   {% include 'toolkit/forms/validation.html' %}
 {% endwith %}
 
-<header class="page-heading">
-    <h1>Reset password</h1>
-</header>
+<h1 class="govuk-heading-xl">Reset password</h1>
+
 <p class="lede">
     Enter your email address and we'll send you a link so you can reset your
     password. Password reset links are only valid for 24 hours.
