--- a/app/templates/auth/reset-password.html
+++ b/app/templates/auth/reset-password.html
@@ -19,11 +19,8 @@
   {% include "toolkit/forms/validation.html" %}
 {% endwith %}
 
-{% with
-  heading = "Reset password"
-%}
-  {% include "toolkit/page-heading.html" %}
-{% endwith %}
+<h1 class="govuk-heading-xl">Reset password</h1>
+
 <p class="lede">
     Reset password for {{ email_address }}
 </p>
