--- a/app/assets/scss/application.scss
+++ b/app/assets/scss/application.scss
@@ -49,6 +49,9 @@ $govuk-compatibility-govukelements: true;
 @import "_secondary-action-link.scss";
 @import "_error-pages.scss";
 
+// Overrides
+@import "overrides/_page_headings";
+
 // Misc styles
 // TODO: Move misc styling into their own partial files or the Digital Marketplace FE Toolkit
 #wrapper {
