--- a/app/templates/auth/create-user-error.html
+++ b/app/templates/auth/create-user-error.html
@@ -10,9 +10,7 @@
 
   <div class="grid-row">
     <div class="column-two-thirds error-page">
-      <header class="page-heading-smaller">
-        <h1>You must use a public sector email address</h1>
-      </header>
+      <h1 class="govuk-heading-l">You must use a public sector email address</h1>
       <p>
         You must be employed by, or represent, a public sector organisation to create a buyer account.
       </p>
@@ -39,9 +37,7 @@
 
 {% elif not token %}
 
-  <header class="page-heading-smaller">
-    <h1>Expired link</h1>
-  </header>
+  <h1 class="govuk-heading-l">Expired link</h1>
   <p>
     The link you used to create an account may have expired.<br/>
     {% if role == 'buyer' %}
@@ -57,27 +53,21 @@
 
   {% if not user.active %}
 
-    <header class="page-heading-smaller">
-      <h1>Your account has been deactivated.</h1>
-    </header>
+    <h1 class="govuk-heading-l">Your account has been deactivated.</h1>
     <p>
       Email <a href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> to reactivate your account.
     </p>
 
   {% elif user.locked %}
 
-    <header class="page-heading-smaller">
-      <h1>Your account has been locked.</h1>
-    </header>
+    <h1 class="govuk-heading-l">Your account has been locked.</h1>
     <p>
       Email <a href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> to unlock your account.
     </p>
 
   {% elif role == 'buyer' and user.role == 'supplier' %}
 
-    <header class="page-heading-smaller">
-      <h1>The details you provided are registered with a supplier.</h1>
-    </header>
+    <h1 class="govuk-heading-l">The details you provided are registered with a supplier.</h1>
     <p>Your email address is already registered as an account with ‘{{ user.supplier_name }}’.</p>
     <p>You can <a href="{{ url_for('external.create_buyer_account') }}">create a buyer account using a different email address</a>, or email
       <a href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> to have your account
@@ -88,9 +78,7 @@
 
   {% elif role == 'supplier' and user.role == 'supplier' and token.get("supplier_id") != user.supplier_id %}
 
-    <header class="page-heading-smaller">
-      <h1>The details you provided are registered with another supplier.</h1>
-    </header>
+    <h1 class="govuk-heading-l">The details you provided are registered with another supplier.</h1>
     <p>You were invited by ‘{{ token.get("supplier_name") }}’.</p>
     <p>Your account is registered with ‘{{ user.supplier_name }}’.</p>
     <br>
@@ -101,9 +89,7 @@
 
   {% else %}
 
-    <header class="page-heading-smaller">
-      <h1>Account already exists</h1>
-    </header>
+    <h1 class="govuk-heading-l">Account already exists</h1>
 
     <p>
       <a href="{{ url_for('.render_login') }}">Log in</a> to your account.
