--- a/app/templates/auth/create-user.html
+++ b/app/templates/auth/create-user.html
@@ -16,14 +16,8 @@
    }
 %}
 
-{%
-  with
-  smaller = true,
-  heading = headings[role],
-  context = email_address
-%}
-  {% include "toolkit/page-heading.html" %}
-{% endwith %}
+<span class="govuk-caption-l">{{ email_address }}</span>
+<h1 class="govuk-heading-l">{{ headings[role] }}</h1>
 
 
     <form autocomplete="off" action="{{ url_for('.submit_create_user', encoded_token=token) }}" method="POST" id="createUserForm">
