switch buttons to digitalmarketplace-govuk-frontend

--- a/app/templates/auth/change-password.html
+++ b/app/templates/auth/change-password.html
@@ -28,7 +28,7 @@
     <div class="grid-row">
         <div class="column-two-thirds">
             {{ form.hidden_tag() }}
-          
+
             {% with question = form.old_password.label,
                     name = "old_password",
                     error = errors.get('old_password', {}).get('message'),
@@ -38,35 +38,31 @@
             %}
               {% include "toolkit/forms/textbox.html" %}
             {% endwith %}
-  
-          {% with question = form.password.label,
-                  name = "password",
-                  error = errors.get('password', {}).get('message'),
-                  hint = form.password.hint,
-                  value = form.password.data,
-                  type = "password",
-                  autocomplete = "off"
-          %}
-            {% include "toolkit/forms/textbox.html" %}
-          {% endwith %}
-  
-          {% with question = form.confirm_password.label,
-                  name = "confirm_password",
-                  error = errors.get('confirm_password', {}).get('message'),
-                  value = form.confirm_password.data,
-                  type = "password",
-                  autocomplete = "off"
-          %}
-            {% include "toolkit/forms/textbox.html" %}
-          {% endwith %}
 
-            {%
-              with
-              type = "save",
-              label = "Save changes"
+            {% with question = form.password.label,
+                    name = "password",
+                    error = errors.get('password', {}).get('message'),
+                    hint = form.password.hint,
+                    value = form.password.data,
+                    type = "password",
+                    autocomplete = "off"
             %}
-              {% include "toolkit/button.html" %}
+              {% include "toolkit/forms/textbox.html" %}
             {% endwith %}
+
+            {% with question = form.confirm_password.label,
+                    name = "confirm_password",
+                    error = errors.get('confirm_password', {}).get('message'),
+                    value = form.confirm_password.data,
+                    type = "password",
+                    autocomplete = "off"
+            %}
+              {% include "toolkit/forms/textbox.html" %}
+            {% endwith %}
+
+            {{ govukButton({
+              "text": "Save changes"
+            }) }}
         </div>
     </div>
 </form>
