--- a/app/templates/auth/request-password-reset.html
+++ b/app/templates/auth/request-password-reset.html
@@ -47,13 +47,9 @@
               {% include "toolkit/forms/textbox.html" %}
             {% endwith %}
 
-            {%
-              with
-              type = "save",
-              label = "Send reset email"
-            %}
-              {% include "toolkit/button.html" %}
-            {% endwith %}
+            {{ govukButton({
+              "text": "Send reset email"
+            }) }}
         </div>
     </div>
 </form>
