--- a/app/templates/auth/reset-password.html
+++ b/app/templates/auth/reset-password.html
@@ -50,13 +50,9 @@
               {% include "toolkit/forms/textbox.html" %}
             {% endwith %}
 
-            {%
-              with
-              type = "save",
-              label = "Reset password"
-            %}
-              {% include "toolkit/button.html" %}
-            {% endwith %}
+            {{ govukButton({
+              "text": "Reset password"
+            }) }}
         </div>
     </div>
 </form>
