switch paragraphs to digitalmarketplace-govuk-frontend's classes
our .text seems to be sufficiently fulfilled by .govuk-body's rules

--- a/app/templates/auth/create-user-error.html
+++ b/app/templates/auth/create-user-error.html
@@ -11,14 +11,14 @@
   <div class="grid-row">
     <div class="column-two-thirds error-page">
       <h1 class="govuk-heading-l">You must use a public sector email address</h1>
-      <p>
+      <p class="govuk-body">
         You must be employed by, or represent, a public sector organisation to create a buyer account.
       </p>
-      <p>
+      <p class="govuk-body">
         The email you used doesn't belong to a recognised public sector domain.
       </p>
       <div class="explanation-list">
-        <p class="lead">
+        <p class="govuk-body-l">
           <a href="{{ url_for('external.create_buyer_account') }}">Create an account using a different email address</a> or email
           <a href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> if:
         </p>
@@ -38,7 +38,7 @@
 {% elif not token %}
 
   <h1 class="govuk-heading-l">Expired link</h1>
-  <p>
+  <p class="govuk-body">
     The link you used to create an account may have expired.<br/>
     {% if role == 'buyer' %}
       Check you’ve entered the correct link or <a href="{{ url_for('external.create_buyer_account') }}">send a new one</a>.<br/>
@@ -54,35 +54,35 @@
   {% if not user.active %}
 
     <h1 class="govuk-heading-l">Your account has been deactivated.</h1>
-    <p>
+    <p class="govuk-body">
       Email <a href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> to reactivate your account.
     </p>
 
   {% elif user.locked %}
 
     <h1 class="govuk-heading-l">Your account has been locked.</h1>
-    <p>
+    <p class="govuk-body">
       Email <a href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> to unlock your account.
     </p>
 
   {% elif role == 'buyer' and user.role == 'supplier' %}
 
     <h1 class="govuk-heading-l">The details you provided are registered with a supplier.</h1>
-    <p>Your email address is already registered as an account with ‘{{ user.supplier_name }}’.</p>
-    <p>You can <a href="{{ url_for('external.create_buyer_account') }}">create a buyer account using a different email address</a>, or email
+    <p class="govuk-body">Your email address is already registered as an account with ‘{{ user.supplier_name }}’.</p>
+    <p class="govuk-body">You can <a href="{{ url_for('external.create_buyer_account') }}">create a buyer account using a different email address</a>, or email
       <a href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> to have your account
       converted to a buyer account.</p>
-    <p>
+    <p class="govuk-body">
       Alternatively, <a href="{{ url_for('.render_login') }}">Log in</a> to your {{ user.supplier_name }} account.
     </p>
 
   {% elif role == 'supplier' and user.role == 'supplier' and token.get("supplier_id") != user.supplier_id %}
 
     <h1 class="govuk-heading-l">The details you provided are registered with another supplier.</h1>
-    <p>You were invited by ‘{{ token.get("supplier_name") }}’.</p>
-    <p>Your account is registered with ‘{{ user.supplier_name }}’.</p>
+    <p class="govuk-body">You were invited by ‘{{ token.get("supplier_name") }}’.</p>
+    <p class="govuk-body">Your account is registered with ‘{{ user.supplier_name }}’.</p>
     <br>
-    <p>
+    <p class="govuk-body">
       <a href="/login">Log in</a> to your {{ user.supplier_name }} account or email
       <a href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> to register your account with a different organisation.
     </p>
@@ -91,7 +91,7 @@
 
     <h1 class="govuk-heading-l">Account already exists</h1>
 
-    <p>
+    <p class="govuk-body">
       <a href="{{ url_for('.render_login') }}">Log in</a> to your account.
     </p>
 
