--- a/app/templates/auth/request-password-reset.html
+++ b/app/templates/auth/request-password-reset.html
@@ -26,7 +26,7 @@
 
 <h1 class="govuk-heading-xl">Reset password</h1>
 
-<p class="lede">
+<p class="govuk-body-l">
     Enter your email address and we'll send you a link so you can reset your
     password. Password reset links are only valid for 24 hours.
 </p>
