--- a/app/templates/auth/reset-password.html
+++ b/app/templates/auth/reset-password.html
@@ -21,7 +21,7 @@
 
 <h1 class="govuk-heading-xl">Reset password</h1>
 
-<p class="lede">
+<p class="govuk-body-l">
     Reset password for {{ email_address }}
 </p>
 
