switch links to digitalmarketplace-govuk-frontend's classes

--- a/app/templates/auth/create-user-error.html
+++ b/app/templates/auth/create-user-error.html
@@ -19,8 +19,8 @@
       </p>
       <div class="explanation-list">
         <p class="govuk-body-l">
-          <a href="{{ url_for('external.create_buyer_account') }}">Create an account using a different email address</a> or email
-          <a href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> if:
+          <a class="govuk-link" href="{{ url_for('external.create_buyer_account') }}">Create an account using a different email address</a> or email
+          <a class="govuk-link" href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> if:
         </p>
         <ul class="list-bullet">
           <li>
@@ -41,11 +41,11 @@
   <p class="govuk-body">
     The link you used to create an account may have expired.<br/>
     {% if role == 'buyer' %}
-      Check you’ve entered the correct link or <a href="{{ url_for('external.create_buyer_account') }}">send a new one</a>.<br/>
-      If you still can’t create an account, email <a href="mailto:{{ support_email_address }}">{{ support_email_address }}</a>.
+      Check you’ve entered the correct link or <a class="govuk-link" href="{{ url_for('external.create_buyer_account') }}">send a new one</a>.<br/>
+      If you still can’t create an account, email <a class="govuk-link" href="mailto:{{ support_email_address }}">{{ support_email_address }}</a>.
     {% elif role == 'supplier' %}
       Check you’ve entered the correct link or ask the person who invited you to send a new invitation.<br/>
-      If you still can’t create a contributor account, email <a href="mailto:{{ support_email_address }}">{{ support_email_address }}</a>.
+      If you still can’t create a contributor account, email <a class="govuk-link" href="mailto:{{ support_email_address }}">{{ support_email_address }}</a>.
     {% endif %}
   </p>
 
@@ -55,25 +55,25 @@
 
     <h1 class="govuk-heading-l">Your account has been deactivated.</h1>
     <p class="govuk-body">
-      Email <a href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> to reactivate your account.
+      Email <a class="govuk-link" href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> to reactivate your account.
     </p>
 
   {% elif user.locked %}
 
     <h1 class="govuk-heading-l">Your account has been locked.</h1>
     <p class="govuk-body">
-      Email <a href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> to unlock your account.
+      Email <a class="govuk-link" href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> to unlock your account.
     </p>
 
   {% elif role == 'buyer' and user.role == 'supplier' %}
 
     <h1 class="govuk-heading-l">The details you provided are registered with a supplier.</h1>
     <p class="govuk-body">Your email address is already registered as an account with ‘{{ user.supplier_name }}’.</p>
-    <p class="govuk-body">You can <a href="{{ url_for('external.create_buyer_account') }}">create a buyer account using a different email address</a>, or email
-      <a href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> to have your account
+    <p class="govuk-body">You can <a class="govuk-link" href="{{ url_for('external.create_buyer_account') }}">create a buyer account using a different email address</a>, or email
+      <a class="govuk-link" href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> to have your account
       converted to a buyer account.</p>
     <p class="govuk-body">
-      Alternatively, <a href="{{ url_for('.render_login') }}">Log in</a> to your {{ user.supplier_name }} account.
+      Alternatively, <a class="govuk-link" href="{{ url_for('.render_login') }}">Log in</a> to your {{ user.supplier_name }} account.
     </p>
 
   {% elif role == 'supplier' and user.role == 'supplier' and token.get("supplier_id") != user.supplier_id %}
@@ -83,8 +83,8 @@
     <p class="govuk-body">Your account is registered with ‘{{ user.supplier_name }}’.</p>
     <br>
     <p class="govuk-body">
-      <a href="/login">Log in</a> to your {{ user.supplier_name }} account or email
-      <a href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> to register your account with a different organisation.
+      <a class="govuk-link" href="/login">Log in</a> to your {{ user.supplier_name }} account or email
+      <a class="govuk-link" href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> to register your account with a different organisation.
     </p>
 
   {% else %}
@@ -92,7 +92,7 @@
     <h1 class="govuk-heading-l">Account already exists</h1>
 
     <p class="govuk-body">
-      <a href="{{ url_for('.render_login') }}">Log in</a> to your account.
+      <a class="govuk-link" href="{{ url_for('.render_login') }}">Log in</a> to your account.
     </p>
 
   {% endif %}
