switch lists to digitalmarketplace-govuk-frontend's classes

--- a/app/templates/auth/create-user-error.html
+++ b/app/templates/auth/create-user-error.html
@@ -22,7 +22,7 @@
           <a class="govuk-link" href="{{ url_for('external.create_buyer_account') }}">Create an account using a different email address</a> or email
           <a class="govuk-link" href="mailto:{{ support_email_address }}">{{ support_email_address }}</a> if:
         </p>
-        <ul class="list-bullet">
+        <ul class="govuk-list">
           <li>
             you think your domain should be recognised
           </li>
