--- a/app/templates/notifications/user-research-consent.html
+++ b/app/templates/notifications/user-research-consent.html
@@ -39,7 +39,7 @@
       <p class="govuk-body">
         When you join our user research mailing list you:
       </div>
-      <ul class="list list-bullet">
+      <ul class="govuk-list">
         <li>will only be contacted to be invited to take part in user research</li>
         <li>don’t have to agree to take part in research</li>
         <li>can unsubscribe at any time</li>
