Adding vertical spacing to notifications.
There is a current issue with vertical spacing of notifications. This
commit adds it temporarily but idealy the component itself should be
adding the margin spacing it requires.

--- a/app/assets/scss/application.scss
+++ b/app/assets/scss/application.scss
@@ -48,6 +48,7 @@ $govuk-compatibility-govukelements: true;
 @import "_error-pages.scss";
 
 // Overrides
+@import "overrides/_notification-banner";
 @import "overrides/_page_headings";
 
 // Misc styles
