user research consent template: correct mismatched p tag, add bullets to list

--- a/app/templates/notifications/user-research-consent.html
+++ b/app/templates/notifications/user-research-consent.html
@@ -38,8 +38,8 @@
       </p>
       <p class="govuk-body">
         When you join our user research mailing list you:
-      </div>
-      <ul class="govuk-list">
+      </p>
+      <ul class="govuk-list govuk-list--bullet">
         <li>will only be contacted to be invited to take part in user research</li>
         <li>don’t have to agree to take part in research</li>
         <li>can unsubscribe at any time</li>
