Add overrides for govuk-label
We want to make sure that govuk-input labels look similar to labels on
inputs that haven't been migrated to use govuk-frontend components.

--- a/app/assets/scss/application.scss
+++ b/app/assets/scss/application.scss
@@ -47,6 +47,7 @@ $govuk-compatibility-govukelements: true;
 // Overrides
 @import "overrides/_notification-banner";
 @import "overrides/_page_headings";
+@import "overrides/_govuk-label";
 
 // Misc styles
 // TODO: Move misc styling into their own partial files or the Digital Marketplace FE Toolkit
