removed secondary-action-link

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -57,26 +57,17 @@
         }) }}
 
 
-        {%
-          with
-          url = url_for('.request_password_reset'),
-          text = "Forgotten password"
-        %}
-          {% include "toolkit/secondary-action-link.html" %}
-        {% endwith %}
+        <a class="govuk-link govuk-!-margin-top-3 govuk-!-display-block" href="{{ url_for('.request_password_reset') }}">
+          Forgotten password
+        </a>
 
         {{ govukButton({
           "text": "Log in"
         }) }}
 
-        {%
-          with
-          url = url_for('external.create_buyer_account'),
-          text = "Create a buyer account",
-          bigger = true
-        %}
-          {% include "toolkit/secondary-action-link.html" %}
-        {% endwith %}
+        <a class="govuk-link govuk-!-margin-top-7 govuk-!-font-size-24 govuk-!-display-block" href="{{ url_for('external.create_buyer_account') }}">
+          Create a buyer account
+        </a>
       </div>
     </div>
   </form>
