--- a/app/templates/notifications/user-research-consent.html
+++ b/app/templates/notifications/user-research-consent.html
@@ -87,6 +87,10 @@
       %}
         {% include "toolkit/secondary-action-link.html" %}
       {% endwith %}
+
+      <a class="govuk-link govuk-!-margin-top-3 govuk-!-display-inline-block" href="{{ dashboard_url }}">
+        Return to your account
+      </a>
     </div>
 
   </div>
