--- a/app/templates/auth/change-password.html
+++ b/app/templates/auth/change-password.html
@@ -78,11 +78,5 @@
       </div>
     </div>
   </form>
-{%
-  with
-  url = dashboard_url,
-  text = "Return to your account"
-%}
-  {% include "toolkit/secondary-action-link.html" %}
-{% endwith %}
+<a class="govuk-link govuk-!-margin-top-3 govuk-!-display-block" href="{{ dashboard_url }}">Return to your account</a>
 {% endblock %}
