import and use dmCookieBanner in the template
Imports and calls the new cookie banner component in _base_page template

--- a/app/templates/_base_page.html
+++ b/app/templates/_base_page.html
@@ -10,6 +10,7 @@
 
 
 {# Import DM Components #}
+{% from "digitalmarketplace/components/cookie-banner/macro.njk" import dmCookieBanner %}
 {% from "digitalmarketplace/components/header/macro.njk" import dmHeader%}
 {% from "digitalmarketplace/components/footer/macro.njk" import dmFooter%}
 
@@ -23,6 +24,7 @@
 {% endblock %}
 
 {% block header %}
+  {{ dmCookieBanner({}) }}
   {{ dmHeader({
     "role": current_user.role | default(None)
   }) }}
