Review error messages for /user/create/<token>

--- a/app/templates/auth/create-user.html
+++ b/app/templates/auth/create-user.html
@@ -56,6 +56,9 @@
           "label": {
             "text": form.password.label.text,
           },
+          "hint": {
+            "text": form.password.hint,
+          },
           "errorMessage": errors.password.errorMessage,
           "id": "input-password",
           "type": "password",
